--- a/css/style.css
+++ b/css/style.css
@@ -45,10 +45,19 @@ body {
 }
 
 #capitol {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     border-radius: 40%;
 }
 
 p {
     font-size: 18px;
+}
+
+nav {
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.table {
+    margin-left: 30px;
 }
