--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
-    font-family: monospace;
+    font-family: serif;
     font-size: 15px;
+    font-style: oblique;
 }
 
 
@@ -9,7 +10,7 @@ h1 {
     width: 120%;
     position: absolute;
     right: 20px;
-    border: 1px solid black;
+    border: 3px solid black;
     border-spacing: 7px;
 
 }
@@ -65,7 +66,7 @@ h1 {
 }
 
 p {
-    font-size: 15px;
+    font-size: 18px;
 }
 
 nav {
@@ -79,4 +80,18 @@ nav {
 
 #continue {
     margin-top: 30px;
+}
+
+.states_filter {
+display: flex;
+justify-content: flex-end;
+margin-bottom: 15px;
+margin-right: 20px;
+
+}
+
+.party_filter {
+    position: absolute;
+    margin-left: 20px;
+    margin-top: 15px;
 }
